# minimum_cpp20_cmake

./: CMakeLists.txt  LICENSE  README.md  main.cpp
